# AiogramDemo

./: .dockerignore  .gitignore  Dockerfile  bot.py  config.py  logging_config.py  pyproject.toml  redis_session.py
logs/: __init__.py  asyncio_logger_config.py
src/database/: __init__.py
src/database/storage/: sesion_errors.py  session.py
src/handlers/: notes.py  register.py  start.py
src/middleware/: __init__.py  logging_updates.py  rate_limit_middleware.py  session_middleware.py
src/services/: api_service.py
